add_subdirectory(base)
add_subdirectory(math)
add_subdirectory(util)
#add_subdirectory(graphics)
#add_subdirectory(view)
#add_subdirectory(posixutil)
#add_subdirectory(glutil)
#add_subdirectory(winutil)
#add_subdirectory(winview)
#add_subdirectory(rnd_util)
#add_subdirectory(kinematics)
#add_subdirectory(machine_learning)
#add_subdirectory(machine_vision)
#add_subdirectory(pattern_recognition)
