add_subdirectory(base)
add_subdirectory(math)
add_subdirectory(util)
add_subdirectory(graphics)
add_subdirectory(view)
add_subdirectory(glutil)
if(WIN32 AND NOT CYGWIN)
	add_subdirectory(winutil)
	add_subdirectory(winview)
else(WIN32 AND NOT CYGWIN)
	add_subdirectory(posixutil)
endif(WIN32 AND NOT CYGWIN)
add_subdirectory(rnd_util)
add_subdirectory(kinematics)
add_subdirectory(machine_learning)
add_subdirectory(pattern_recognition)
add_subdirectory(machine_vision)
