add_subdirectory(base_test)
add_subdirectory(math_test)
add_subdirectory(util_test)
add_subdirectory(graphics_test)
add_subdirectory(view_test)
add_subdirectory(glutil_test)
if(WIN32 AND NOT CYGWIN)
	add_subdirectory(wglview_test)
	add_subdirectory(winutil_test)
	add_subdirectory(winview_test)
	add_subdirectory(serial_port_test)
else(WIN32 AND NOT CYGWIN)
	add_subdirectory(posixutil_test)
endif(WIN32 AND NOT CYGWIN)
add_subdirectory(tcp_socket_client_test)
add_subdirectory(tcp_socket_server_test)
add_subdirectory(rnd_util_test)
add_subdirectory(kinematics_test)
add_subdirectory(machine_learning_test)
add_subdirectory(pattern_recognition_test)
add_subdirectory(machine_vision_test)
add_subdirectory(gesture_recognition_test)
